# llama-mcp

./: .gitignore  .model_config  despair.py  main.py  run_coder.sh  run_llama.sh  run_llm.sh  test  test.pub
.gradio/flagged/: dataset1.csv
app/: app.py
download_weights/: dwld.py
hf-tutorial/: package-lock.json
mcp-client/: .gitignore  client.py  pyproject.toml
mcp-openai-client/: .env  client.py
mcp-server/: pyproject.toml  weather.py
mcp-server/weather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp-server/weather_fetcher/: weather.py
