[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "llama-cpp-python",
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "weather",
]
