[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.1.0"
description = "FastMCP server for weather fetching"
authors = [{ name="ns", email="ns@gmail.com" }]
dependencies = [
  "fastmcp",
  "requests",
  "httpx",
]
[project.scripts]
url-text-fetcher = "weather_fetcher.weather:main"